# obs-mdct

./: .gitignore  CMakeLists.txt
src/: mdct_motion_detect.cpp  mdct_motion_detect.hpp  mdct_obs_ifcpp.cpp  mdct_obs_interface.c  simd_ops.cpp  simd_ops.h
